Added toggle functionality and improved the design

--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,38 @@
 {
-    "manifest_version": 3,
-    "name": "Text Selection Saver",
-    "version": "1.0",
-    "permissions": ["activeTab"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["contentScript.js"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "DocuLingo",
+  "version": "1.0",
+  "description": "Translate programming language documentation or selected content into a user-selected language using a Django-powered backend.",
+  "permissions": [
+    "activeTab",
+    "storage",
+    "contextMenus",
+    "scripting"
+  ],
+  "host_permissions": [
+    "http://localhost:8000/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "Translate Page"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js"],
+      "run_at": "document_idle"
+    }
+  ],
+  "commands": {
+    "translate-selection": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+T",
+        "mac": "Command+Shift+T"
+      },
+      "description": "Translate selected text"
+    }
   }
-  
+}
