--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "activeTab",
     "storage",
     "contextMenus",
-    "scripting"
+    "scripting",
+    "tabs"  
   ],
   "host_permissions": [
     "http://localhost:8000/*"
